tests/NormalTests/paczka1/small_fuzzy/31041158.err
Error in line 2: X84iJpQmS SF26 141,0
Error in line 11: S622 S622 92,5
